--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -4,7 +4,7 @@
   If you don't have an account, you can sign up with your name and apartment number - and soon enough your clothes will smell of fresh rainbows.
   Having problems with the site? Email our system admin at unicorn_boss@rainbows.now</p>
 
-<%= link_to 'Book', laundry_room_index_path %>
+<%= link_to 'Book', '/laundry_room' %>
 <%= link_to 'Sign Up', new_user_registration_path %>
 <% flash.each do |message_type, message| %>
     <%= content_tag(:div, message) %>
