--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -5,6 +5,7 @@
   Having problems with the site? Email our system admin at unicorn_boss@rainbows.now</p>
 
 <%= link_to 'Book', '/laundry_room' %>
+<%= link_to 'Sign in', '/users/sign_in' %>
 <%= link_to 'Sign Up', new_user_registration_path %>
 <% flash.each do |message_type, message| %>
     <%= content_tag(:div, message) %>
