--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -5,7 +5,12 @@
   Having problems with the site? Email our system admin at unicorn_boss@rainbows.now</p>
 
 <%= link_to 'Sign Up', new_user_registration_path %>
+<%= link_to 'Calendar', calendar_index_path %>
 
 <% flash.each do |message_type, message| %>
     <%= content_tag(:div, message) %>
+<% end %>
+
+<%= month_calendar do |date| %>
+    <%= date %>
 <% end %>
