--- a/app/views/laundry_rooms/index.html.erb
+++ b/app/views/laundry_rooms/index.html.erb
@@ -5,13 +5,13 @@
   smell of fresh rainbows.
   Having problems with the site? Email our system admin at unicorn_boss@rainbows.now</p>
 
-<%= link_to 'Book', '/laundry_rooms' %>
-<%= link_to 'Sign in', '/users/sign_in' %>
-<%= link_to 'Sign Up', new_user_registration_path %>
-<%= link_to 'Calendar', calendar_index_path %>
-<% flash.each do |message_type, message| %>
-  <%= content_tag(:div, message) %>
+<% if current_user %>
+    <%= button_to 'Sign out', destroy_user_session_path, method: :delete %>
+<% else %>
+    <%= link_to 'Sign Up', new_user_registration_path %>
+    <%= link_to 'Sign in', '/users/sign_in' %>
 <% end %>
+<%= link_to 'Calendar', calendar_index_path %>
 
 <h1>Book a LaundryTime</h1>
 <table>
