--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,5 +1,12 @@
-<div class="container">
-  <nav class="navbar fixed-top navbar-light bg-light">
-    <a class="navbar-brand" href="/">It's Laundry time!</a>
-  </nav>
-</div>
+<nav class="navbar navbar-light">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Laundry Time!</a>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="/users/sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="/users/sign_in"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a href="/users/sign_out"><span class="glyphicon glyphicon-log-out"></span> Login</a></li>
+    </ul>
+  </div>
+</nav>
