more fix to the settings

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>LaundryTime</title>
   <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag "application.sass" %>
+  <%= stylesheet_link_tag "application.scss" %>
   <style>
     body {
       background-color: rgb(204, 255, 253);
