--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,16 @@
 @import "bootstrap";
-//= require jquery3
-//= require popper
-//= require bootstrap-sprockets
 
 @at-root {
   @-ms-viewport { width: device-width; }
 }
+ body {
+   background-color: rgb(204, 255, 253);
+   margin-top: 50px;
+   color: #633472;
+   h1 {
+     text-align: center;
+   }
+
+   h2 {
+     text-align: left;
+   }
