--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,3 +1,5 @@
+<%= stylesheet_link_tag "application.scss" %>
+
 <nav class="navbar navbar-light">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -6,7 +8,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/users/sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="/users/sign_in"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      <li><a href="/users/sign_out"><span class="glyphicon glyphicon-log-out"></span> Login</a></li>
+      <li><a href="/users/sign_out"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
     </ul>
   </div>
 </nav>
