--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
 <head>
   <title>LaundryTime</title>
   <%= csrf_meta_tags %>
-  <%= stylesheet_link_tag "application.scss" %>
-
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
 </head>
 
