--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,14 +1,23 @@
-<%= stylesheet_link_tag "application.scss" %>
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+  <a class="navbar-brand" href="#">LaundryTime</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-<nav class="navbar navbar-light">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Laundry Time!</a>
-    </div>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="/users/sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="/users/sign_in"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      <li><a href="/users/sign_out"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <% if current_user %>
+        <li class="nav-item">
+          <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link'%>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to 'Sign Up', new_user_registration_path , class: 'nav-link'%>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Sign in', '/users/sign_in', class: 'nav-link' %>
+        </li>
+      <% end %>
     </ul>
   </div>
 </nav>
