fixed the background color navbar color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap";
  body {
-   background-color: rgb(204, 255, 253);
+   background-color: rgb(255, 255, 255);
    color: #633472;
+   margin-top: 55px;
  }
