--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,12 @@
 <body>
 <%= render 'shared/navigation' %>
 <div class="container">
-  <% flash.each do |message_type, message| %>
-      <%= content_tag(:div, message) %>
+  <% flash.each do |key, value| %>
+      <div class="text-center <%= flash_class(key) %>">
+        <%= value %>
+      </div>
   <% end %>
+
   <%= yield %>
 </div>
 </body>
