--- a/app/views/laundry_rooms/index.html.erb
+++ b/app/views/laundry_rooms/index.html.erb
@@ -1,15 +1,12 @@
 <h1>It's LaundryTime! </h1>
 <h2>Welcome to LaundryTime for Unicorn-Apartments</h2>
 <p>This is where the cleaning magic happens - book the laundry room online and save precious dreamtime!
-  If you don't have an account, you can sign up with your name and apartment number - and soon enough your clothes will
+  If you don't have an account, you can sign up with your email - and soon enough your clothes will
   smell of fresh rainbows.
   Having problems with the site? Email our system admin at unicorn_boss@rainbows.now</p>
 
-
-<%= link_to 'Calendar', calendar_index_path %>
-
 <% if current_user %>
-  <h1>Your bookings:</h1>
+    <h1>Your bookings:</h1>
   <% if current_user.bookings.any? %>
     <% current_user.bookings.each do |booking| %>
       <ul>
