--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-light" style="background-color: #633472;">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #633472;">
   <a class="navbar-brand" style="color: white" href="#">LaundryTime</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto" >
       <% if current_user %>
-        <li class="nav-item">
+        <li class="nav" style="text-color:white">
           <%= link_to 'Sign out', destroy_user_session_path, class: 'nav-link'%>
         </li>
         <li class="nav-item">
