--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -7,10 +7,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto" >
       <% if current_user %>
-        <li class="nav" style="text-color:white">
-          <%= link_to 'Sign out', destroy_user_session_path, class: 'nav-link'%>
+        <li class="navbar-text">
+          Logged in as: <%= current_user.email %>
         </li>
         <li class="nav-item">
+          <%= link_to 'Sign out', destroy_user_session_path, class: 'nav-link'%>
+        </li>
+        <li class="nav-item" >
           <%= link_to 'Calendar', calendar_index_path, class: 'nav-link' %>
         </li>
       <% else %>
