--- a/app/views/laundry_rooms/index.html.erb
+++ b/app/views/laundry_rooms/index.html.erb
@@ -1,25 +1,17 @@
 <h1>It's LaundryTime! </h1>
 <h2>Welcome to LaundryTime for Unicorn-Apartments</h2>
 <p>This is where the cleaning magic happens - book the laundry room online and save precious dreamtime!
-  If you don't have an account, you can sign up with your name and apartment number - and soon enough your clothes will
+  If you don't have an account, you can sign up with your email - and soon enough your clothes will
   smell of fresh rainbows.
   Having problems with the site? Email our system admin at unicorn_boss@rainbows.now</p>
 
 <% if current_user %>
-    <%= button_to 'Sign out', destroy_user_session_path, method: :delete %>
-<% else %>
-    <%= link_to 'Sign Up', new_user_registration_path %>
-    <%= link_to 'Sign in', '/users/sign_in' %>
-<% end %>
-<%= link_to 'Calendar', calendar_index_path %>
-
-<% if current_user %>
-  <h1>Your bookings:</h1>
-    <% if current_user.bookings.any? %>
+    <h1>Your bookings:</h1>
+  <% if current_user.bookings.any? %>
     <% current_user.bookings.each do |booking| %>
-        <ul>
-          <li><%= booking[:time].beginning_of_hour.to_formatted_s(:short) %></li>
-        </ul>
+      <ul>
+        <li><%= booking[:time].beginning_of_hour.to_formatted_s(:short) %></li>
+      </ul>
     <% end %>
   <% else %>
    <p>You don't have any bookings yet.</p>
