--- a/app/views/laundry_rooms/index.html.erb
+++ b/app/views/laundry_rooms/index.html.erb
@@ -6,44 +6,31 @@
   Having problems with the site? Email our system admin at unicorn_boss@rainbows.now</p>
 
 <% if current_user %>
-    <h1>Your bookings:</h1>
-  <% if current_user.bookings.any? %>
+  <h1>Your bookings:</h1>
+    <% if current_user.bookings.any? %>
     <% current_user.bookings.each do |booking| %>
       <ul>
         <li><%= booking[:time].beginning_of_hour.to_formatted_s(:short) %></li>
       </ul>
     <% end %>
   <% else %>
-   <p>You don't have any bookings yet.</p>
+    <p>You don't have any bookings yet.</p>
   <% end %>
 
-  <h1>Book a LaundryTime</h1>
-    <table>
-      <tr>
-        <th>ID</th>
-        <th>Slots</th>
-        <th>Actions</th>
-      </tr>
-      <% @laundry_rooms.each do |room| %>
-        <tr>
-          <td>
-            <%= room.id %>
-          </td>
-          <td>
-            <table>
-              <% room.schedule.next_occurrences(4).each do |slot| %>
-                <tr data-date="<%= slot.beginning_of_hour.to_formatted_s(:short) %>">
-                  <td>
-                    <%= slot.beginning_of_hour.to_formatted_s(:short) %>
-                  </td>
-                  <td>
-                    <%= link_to 'Book', laundry_room_create_booking_path(room, time: slot.beginning_of_hour.to_formatted_s(:short)) %>
-                  </td>
-                </tr>
-              <% end %>
-            </table>
-          </td>
-        </tr>
+  <% @laundry_rooms.each do |room| %>
+    <%= month_calendar events: room.schedule.next_occurrences(30) do |date, slots| %>
+      <%= date.day %>
+
+      <% slots.each do |slot| %>
+        <div data-date="<%= slot.to_formatted_s(:short) %>">
+          <% if room.check_availability time: slot, amount: 1 %>
+            <%= link_to slot.strftime('%H:%M'), laundry_room_create_booking_path(room, time: slot.beginning_of_hour.to_formatted_s(:short)) %>
+          <% else %>
+            <strong><%= slot.strftime('%H:%M') %></strong>
+          <% end %>
+        </div>
       <% end %>
-    </table>
+    <% end %>
+  <% end %>
 <% end %>
+
