--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,8 @@
 <%= render 'shared/navigation' %>
 <div class="container">
   <% flash.each do |key, value| %>
-      <div class="text-center <%= flash_class(key) %>">
-        <%= value %>
-      </div>
+      <%= content_tag(:div, value, class: ['text-center', flash_class(key)]) %>
   <% end %>
-
   <%= yield %>
 </div>
 </body>
