--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,3 +88,20 @@ td {
 .has-events {}
 }
 
+.calendar-title {
+  font-size: 20px;
+}
+
+.calendar-heading {
+  text-align: center;
+  padding-top: 20px;
+}
+
+#links li, #links a {
+  color: white;
+  padding-right: 20px;
+}
+
+h1 {
+  padding-top:20px;
+}
