--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -5,7 +5,7 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto" >
+    <ul class="navbar-nav mr-auto" id="links">
       <% if current_user %>
         <li class="navbar-text">
           Logged in as: <%= current_user.email %>
