--- a/app/views/laundry_rooms/index.html.erb
+++ b/app/views/laundry_rooms/index.html.erb
@@ -1,12 +1,7 @@
 <h1>It's LaundryTime! </h1>
-<h2>Welcome to LaundryTime for Unicorn-Apartments</h2>
-<p>This is where the cleaning magic happens - book the laundry room online and save precious dreamtime!
-  If you don't have an account, you can sign up with your email - and soon enough your clothes will
-  smell of fresh rainbows.
-  Having problems with the site? Email our system admin at unicorn_boss@rainbows.now</p>
 
 <% if current_user %>
-  <h1>Your bookings:</h1>
+    <h1>Your bookings:</h1>
     <% if current_user.bookings.any? %>
     <% current_user.bookings.each do |booking| %>
       <ul>
@@ -16,7 +11,6 @@
   <% else %>
     <p>You don't have any bookings yet.</p>
   <% end %>
-
   <% @laundry_rooms.each do |room| %>
     <%= month_calendar events: room.schedule.next_occurrences(30) do |date, slots| %>
       <%= date.day %>
@@ -32,5 +26,12 @@
       <% end %>
     <% end %>
   <% end %>
+<% else %>
+    <h2>Welcome to LaundryTime for Unicorn-Apartments</h2>
+    <p>This is where the cleaning magic happens - book the laundry room online and save precious dreamtime!
+      If you don't have an account, you can sign up with your email - and soon enough your clothes will
+      smell of fresh rainbows.
+      Having problems with the site? Email our system admin at unicorn_boss@rainbows.now</p>
+    <img src="/app/assets/images/unicorn.png" alt="Unicorn">
 <% end %>
 
