changed image tag to erb

--- a/app/views/laundry_rooms/index.html.erb
+++ b/app/views/laundry_rooms/index.html.erb
@@ -32,6 +32,6 @@
       If you don't have an account, you can sign up with your email - and soon enough your clothes will
       smell of fresh rainbows.
       Having problems with the site? Email our system admin at unicorn_boss@rainbows.now</p>
-    <img src="/app/assets/images/unicorn.png" alt="Unicorn">
+    <%= image_tag 'unicorn.png', alt: 'unicorn', style:"height: 200; width: 200;" %>
 <% end %>
 
